[package]
name = "mitex-spec"
description = "Specification Library for MiTeX"
authors.workspace = true
version.workspace = true
license.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[[bench]]
name = "spec_constructions"
harness = false

[dependencies]

[features]

rkyv = ["dep:rkyv", "rkyv/alloc", "rkyv/archive_le"]
rkyv-validation = ["dep:rkyv", "rkyv/validation"]
default = ["serde", "rkyv", "rkyv-validation"]

[dev-dependencies]
once_cell.workspace = true
divan.workspace = true

[lints]
workspace = true
